--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-title: Welcome to my portfolio!
-theme: jekyll-theme-cayman
+title: Welcome to my resume!
+# theme: jekyll-theme-cayman
+theme: minima
